--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
   "name": "react-mui-boilerplate",
   "version": "0.1.0",
+  "description": "The starting point for your next project with ReactJs, built on MUI using TypeScript, ready to be customized to your style.",
+  "keywords": [
+    "react",
+    "material",
+    "mui",
+    "application",
+    "dashboard",
+    "template",
+    "boilerplate"
+  ],
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.41",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -39,5 +35,31 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.41",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "typescript": "^4.7.4"
+  },
+  "author": {
+    "name": "Bilal",
+    "email": "bilal192rb@whatever.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Bilal192rb/react-mui-boilerplate",
+    "directory": "react-mui-boilerplate"
+  },
+  "license": "MIT"
 }
