--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -11,6 +9,9 @@
 # production
 /build
 
+# independent packages repo
+/packages
+
 # misc
 .DS_Store
 .env.local
@@ -18,6 +19,10 @@
 .env.test.local
 .env.production.local
 
+# ignore log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.idea/
+.vscode/
+.npm/
