--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "dependencies": {
+    "@emotion/cache": "^11.9.3",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/lab": "^5.0.0-alpha.89",
@@ -48,6 +49,8 @@
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "stylis": "^4.1.1",
+    "stylis-plugin-rtl": "^2.0.2",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
