--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@mui/lab": "^5.0.0-alpha.89",
     "@mui/material": "^5.8.7",
     "@mui/x-data-grid": "^5.13.0",
+    "date-fns": "^2.29.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
