--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@mui/material": "^5.8.7",
     "@mui/x-data-grid": "^5.13.0",
     "date-fns": "^2.29.1",
+    "notistack": "^2.0.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
