--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "date-fns": "^2.29.1",
     "notistack": "^2.0.5",
     "nprogress": "^0.2.0",
+    "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -64,6 +65,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.41",
+    "@types/numeral": "^2.0.2",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "typescript": "^4.7.4"
