--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@mui/material": "^5.8.7",
     "@mui/x-data-grid": "^5.13.0",
     "date-fns": "^2.29.1",
+    "lodash": "^4.17.21",
     "notistack": "^2.0.5",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
