--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@mui/lab": "^5.0.0-alpha.89",
     "@mui/material": "^5.8.7",
     "@mui/x-data-grid": "^5.13.0",
+    "axios": "^0.27.2",
     "date-fns": "^2.29.1",
     "lodash": "^4.17.21",
     "notistack": "^2.0.5",
