--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@mui/lab": "^5.0.0-alpha.89",
     "@mui/material": "^5.8.7",
     "@mui/x-data-grid": "^5.13.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
     "lodash": "^4.17.21",
@@ -55,8 +56,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "^2.0.2",
     "web-vitals": "^2.1.4"
@@ -70,6 +74,9 @@
     "@types/numeral": "^2.0.2",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/react-redux": "^7.1.24",
+    "@types/redux": "^3.6.0",
+    "@types/redux-persist": "^4.3.1",
     "typescript": "^4.7.4"
   },
   "author": {
