--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "notistack": "^2.0.5",
     "nprogress": "^0.2.0",
