package: added yup validation

--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "redux-persist": "^6.0.0",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "^2.0.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
