--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
+    "framer-motion": "^7.3.2",
     "highlight.js": "^11.6.0",
     "i18next": "^21.9.1",
     "i18next-browser-languagedetector": "^6.1.5",
@@ -63,6 +64,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.34.2",
     "react-i18next": "^11.18.5",
+    "react-intersection-observer": "^9.4.0",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
