--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-hook-form": "^7.34.2",
     "react-i18next": "^11.18.5",
     "react-intersection-observer": "^9.4.0",
+    "react-lazy-load-image-component": "^1.5.5",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
